extensions/xmlrpc: last change to the new base64 lib of java8
Former-commit-id: 0cb7c79e82e2c169268396b8baf16ca7ccb8a56d